# eacli

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
eacli/: __init__.py  __main__.py  config_loader.py
tests/: test_basic.py
